feat: implement CI/CD pipeline with GitHub Actions and AWS ECS (#5)
* ci: setup github actions pipeline for ecs deployment